// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CivilityDelete should be created 1`] = `
<app-civility-delete
  cancel={[Function EventEmitter]}
  civility={[Function Object]}
  delete={[Function EventEmitter]}
  deleting="false"
>
  <section
    class="bg-white"
  >
    <div
      class="p-3"
    >
       QUESTION_DELETE CIVILITY_DELETE 
    </div>
  </section><app-wrapper-validation-action>
    <div
      class="d-flex justify-content-end align-items-center p-3"
    >
      <app-validation-button
        classconfirm="danger"
        ng-reflect-class-confirm="danger"
        ng-reflect-confirm-disabled="false"
        ng-reflect-label-cancel="CANCEL"
        ng-reflect-label-confirm="DELETE"
      >
        <div
          class="button-validation-action text-center d-flex justify-content-end align-items-center p-3-group"
          ng-reflect-klass="button-validation-action text-"
          ng-reflect-ng-class=""
        >
          
          <button
            class="btn btn-cancel btn-lg btn-light"
            ng-reflect-klass="btn btn-cancel btn-lg"
            ng-reflect-ng-class="btn-light"
            type="button"
          >
             CANCEL 
          </button>
          
          <button
            class="btn btn-confirm btn-lg btn-danger"
            ng-reflect-klass="btn btn-confirm btn-lg"
            ng-reflect-ng-class="btn-danger"
            type="submit"
          >
            
            
            
            <span>
              DELETE
            </span>
          </button>
        </div>
      </app-validation-button>
    </div>
  </app-wrapper-validation-action>
</app-civility-delete>
`;

exports[`CivilityDelete should pass deleting to component 1`] = `
<app-civility-delete
  cancel={[Function EventEmitter]}
  civility={[Function Object]}
  delete={[Function EventEmitter]}
  deleting={[Function Boolean]}
>
  <section
    class="bg-white"
  >
    <div
      class="p-3"
    >
       QUESTION_DELETE CIVILITY_DELETE 
    </div>
  </section><app-wrapper-validation-action>
    <div
      class="d-flex justify-content-end align-items-center p-3"
    >
      <app-validation-button
        classconfirm="danger"
        ng-reflect-class-confirm="danger"
        ng-reflect-confirm-disabled="true"
        ng-reflect-label-cancel="CANCEL"
        ng-reflect-label-confirm="DELETE"
      >
        <div
          class="button-validation-action text-center d-flex justify-content-end align-items-center p-3-group"
          ng-reflect-klass="button-validation-action text-"
          ng-reflect-ng-class=""
        >
          
          
          <button
            class="btn btn-confirm btn-lg btn-danger"
            disabled=""
            ng-reflect-klass="btn btn-confirm btn-lg"
            ng-reflect-ng-class="btn-danger"
            type="submit"
          >
            
            <span
              class="spinner-border spinner-border-sm align-baseline"
              style="font-size: 1rem;"
            />
            
            <span>
               LOADING
            </span>
            
          </button>
        </div>
      </app-validation-button>
    </div>
  </app-wrapper-validation-action>
</app-civility-delete>
`;
